.k8s/solid-wm-demo/templates/mongo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: solid-mongo
  name: solid-mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: solid-mongo
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: solid-mongo
    spec:
      containers:
        - image: mongo:4.2
          name: solid-mongo
          args: ["--dbpath", "/data/db"]
          livenessProbe:
            exec:
              command:
                - mongo
                - --disableImplicitSessions
                - --eval
                - "db.adminCommand('ping')"
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          readinessProbe:
            exec:
              command:
                - mongo
                - --disableImplicitSessions
                - --eval
                - "db.adminCommand('ping')"
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          volumeMounts:
            - name: "mongo-data-dir"
              mountPath: "/data/db"
      volumes:
        - name: "mongo-data-dir"
          persistentVolumeClaim:
            claimName: "solid-mongo-pvc"

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: solid-mongo
  name: solid-mongo-svc
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 27017
  selector:
    app: solid-mongo
  type: ClusterIP
status:
  loadBalancer: {}
